Phase 11: JWT security hardening, agent restructuring, and synthesis improvements
- Security: Replace custom JWT filter with JWKS-based validation (JwksClient)
- Gateway: Refactor entity extraction and answer synthesis with improved grounding checks
- Mock agents: Flatten wealth/servicing structure; move from agents/ layout to direct module structure
- Tests: Add integration tests (SecurityRejectionIT, RoleAuthorizationTest) and E2E specs (login, multi-turn, domain authz)
- Manifests: Update agent registration with revised I/O contracts
- Infrastructure: Add ClickHouse integration, expanded Grafana dashboards (conversation-trace, gateway-performance, meridian-demo)
- User management: Extend org seeding and add comprehensive test suite
- Docker: Expand compose with new services (ClickHouse, OTel collector, updated profiles)

Validates JWKS tokens at every hop; prunes agents before fan-out; grounds synthesis in agent outputs only.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>